<resources>
    <string name="app_name">Gesture</string>
    <string name="app_name_long">Simple Gesture</string>

    <string name="accessibility_keyevent_description">Turning on this accessibility service activates Gesture</string>
    <string name="guide_adb">Use ADB to run the commands:</string>
    <string name="enable_service">Enable Gesture</string>
    <string name="hide_start_icon">Hide the Icon for Gesture from the launcher</string>
    <string name="hide_start_icon_desc">After hiding, you need to look for the Gesture entry in [Settings-Accessibility]</string>
    <string name="window_watch">Window (foreground app) trace</string>
    <string name="window_watch_desc">If[Prev App\Next App]and Line Gesture[Automatic color]features are not used, You can turn it off</string>
    <string name="window_watch_disabled">Window (foreground application) tracing is turned off</string>
    <string name="low_power">Disable visual feedback</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="handler_picker">Choose an action</string>
    <string name="please_repeat">Please repeat the gesture~</string>
    <string name="service_active_desc">Activate Gesture in Settings - Accessibility</string>
    <string name="back_hide_task">Press \'Back\' to exclude the application from Recent</string>
    <string name="copy_success">Copy succeeded</string>
    <string name="copy_fail">Copy failed</string>
    <string name="ios_bar">Line Gesture</string>
    <string name="side_bottom">Bottom Edge</string>
    <string name="side_right">Right Edge</string>
    <string name="side_center">Centre</string>
    <string name="show_in">Show In</string>
    <string name="three_section">Three parts</string>
    <string name="side_left">Left Edge</string>
    <string name="basic_styles">Basic Appearance</string>
    <string name="gesture_up">SwipeUp</string>
    <string name="gesture_up_hover">SwipeUp and hover</string>
    <string name="gesture_left">SwipeLeft</string>
    <string name="gesture_left_hover">SwipeLeft and hover</string>
    <string name="gesture_right">SwipeRight</string>
    <string name="gesture_right_hover">SwipeRight and hover</string>
    <string name="gesture_area">Trigger Areas</string>
    <string name="gesture_area_height">Trigger height</string>
    <string name="gesture_area_width">Trigger width</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="size_color">Size/Color</string>
    <string name="width_color">Width/Color</string>
    <string name="fade_out_opacity">FadeOut Opacity</string>
    <string name="shadow_style">Shadow</string>
    <string name="stroke_style">Stroke</string>
    <string name="line_weight">Line Weigh</string>
    <string name="hide_screen_off">Hide when the screen is off</string>
    <string name="ime_avoid">Avoid input methods</string>
    <string name="auto_color">Automatic color</string>
    <string name="auto_color_desc">Observe the display content and change color (need to activate enhancement mode)</string>
    <string name="neon_battery">Battery indicator</string>
    <string name="continuous_switch">Continuous switching</string>
    <string name="continuous_switch_desc">Hover can be triggered repeatedly when swiping left or right to [Switch App]</string>
    <string name="bottom_margin">Bottom Margin</string>
    <string name="edge_action">ACTION</string>
    <string name="slide_hover">Swipe and hover</string>
    <string name="quick_slide">Quick swipe</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="animation_mode">Animation</string>
    <string name="animation">animation</string>
    <string name="back_home_animation">Back Home</string>
    <string name="app_switch_animation">APP Switch</string>
    <string name="choose_app">Choose app</string>
    <string name="animation_mode_default">Default</string>
    <string name="animation_mode_basic">Customized 1</string>
    <string name="animation_mode_custom">Customized 2</string>
    <string name="animation_mode_desc">To use Customized animation, you need to be allowed [Background pop-up]</string>
    <string name="game_optimization">Landscape improvements</string>
    <string name="root_get_recents">Activate enhanced mode using ROOT</string>
    <string name="no_root">Failed to obtain ROOT permission</string>
    <string name="need_root_mode">Please activate "Enhanced Mode" first!</string>
    <string name="simple_gesture">Simple Gesture</string>
    <string name="white_bar_gesture">Line Gesture</string>
    <string name="three_section_gesture">Bottom Three parts</string>
    <string name="three_section_warn">Warning: “Three parts”、“Bottom Edge”、“Line Gesture” No co-existence optimization!</string>
    <string name="hover_delay">Hover duration</string>
    <string name="hover_delay_desc">Decision hover gesture decision delay, An unreasonable amount of time can make gestures difficult to trigger</string>
    <string name="haptic">Haptic feedback</string>
    <string name="haptic_follow_system">Follow system</string>
    <string name="tap_click">Tap/Click</string>
    <string name="haptic_duration">Duration</string>
    <string name="haptic_strength">Strength</string>
    <string name="long_press">Long press</string>
    <string name="hover_long_press">Hover/Long press</string>
    <string name="haptic_tip">You can adjust the value to your preference and vibrator</string>
    <string name="haptic_slide">Swipe haptic</string>
    <string name="haptic_slide_desc">Vibration feedback when swipe</string>
    <string name="other_settings">Other</string>
    <string name="basic_settings">Basic</string>
    <string name="custom_shell_hint">Enter a customized Linux shell script. A maximum of 1024 characters can be entered.</string>
    <string name="custom_shell">Custom shell scripts</string>
    <string name="custom_app">Custom App</string>
    <string name="exclude_app">Application of exclusion</string>
    <string name="coming_soon">This feature is not yet complete, so stay tuned!</string>
    <string name="add">ADD</string>
    <string name="save_succeed">Save succeeded</string>
    <string name="save_fail">Save failed</string>
    <string name="quick_question">\n单击全屏打开应用\n长按窗口化打开应用\n窗口化仅支持部分系统</string>
    <string name="app_switch_exclusive">App Switch excludes</string>
    <string name="app_switch_exclusive_desc">Avoid [Prev APP/Next APP]opening these applications</string>
    <string name="btn_ok">OK</string>
    <string name="faq_click_me">If in doubt, click me</string>
    <string name="steps_click_me">The activation wizard</string>
    <string name="enhanced_mode">Enhanced Mode</string>
    <string name="enhanced_mode_desc">What does it do?\n①Skip apps that have been removed from recent tasks,\n②Line Gesture automatically reverses color\n③Fixed 5 second delay on [App Switch](after back to launcher)\n\nClick the icon on the right to view the activation commands</string>
    <string name="feedback_color">Visual feedback color</string>
    <string name="white_bar_shadow_color">Line shadow color</string>
    <string name="white_bar_stroke_color">Line stroke color</string>
    <string name="white_bar_landscape_color">Line Color(Landscape)</string>
    <string name="white_bar_portrait_color">Line Color(Portrait)</string>

    <string name="action_none">NONE</string>
    <string name="action_back">BACK</string>
    <string name="action_home">HOME</string>
    <string name="action_recent">RECENT</string>
    <string name="action_notification">Notification Panel</string>
    <string name="action_quick_settings">Quick Settings</string>
    <string name="action_power_menu">Power Menu</string>
    <string name="action_prev_app">Prev APP</string>
    <string name="action_next_app">Next APP</string>
    <string name="action_split_screen">Split Screen</string>
    <string name="action_windowed">Windowed current(experimental)</string>
    <string name="action_prev_simulation">RECENT Double-click</string>
    <string name="action_lock_screen">Lock Screen</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_launch_app">Start an app</string>
    <string name="action_launch_app_windowed">Start an app(Windowed, experimental)</string>
    <string name="action_exec_shell">Linux Shell</string>
    <string name="action_quick_apps">Quick Apps</string>
    <string name="action_filter_screenshot">Filter-Screenshot</string>

    <string name="enhanced_mode_is_ok">The enhanced mode is ready</string>
    <string name="daemon_cannot_extract">The daemon cannot extract</string>
    <string name="single_hand_model_left">OneHandedMode(Left)</string>
    <string name="single_hand_model_right">One-Handed Mode(Right)</string>
    <string name="windowed_fail">There is no way to window launch an app on the current Version of Android, but you can fix this by enabling Enhanced mode</string>

</resources>
