<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/three_section_gesture"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <LinearLayout
            style="@style/card_view"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/card_title"
                    android:text="@string/three_section" />

                <Switch
                    android:id="@+id/allow_three_section_landscape"
                    android:scaleY="0.8"
                    android:scaleX="0.8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/landscape" />
                <Switch
                    android:id="@+id/allow_three_section_portrait"
                    android:scaleY="0.8"
                    android:scaleX="0.8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/portrait" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    style="@style/setting_label4em"
                    android:text="@string/gesture_area_width" />

                <SeekBar
                    android:id="@+id/bar_width_three_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:max="100"
                    android:min="0"
                    android:paddingEnd="6dp"
                    android:progress="100" />

                <Button
                    android:id="@+id/bar_color_three_section"
                    style="@style/btn_color_picker" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/row_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/setting_label4em"
                    android:text="@string/gesture_area_height" />

                <SeekBar
                    android:id="@+id/three_section_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"
                    android:max="40"
                    android:paddingEnd="6dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/card_view"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/setting_label_small"
                android:layout_width="match_parent"
                android:text="@string/side_left" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/setting_label_fill"
                    android:text="@string/gesture_up" />

                <Button
                    android:id="@+id/three_section_left_slide"
                    style="@style/btn_handler_picker_right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/setting_label_fill"
                    android:text="@string/gesture_up_hover" />

                <Button
                    android:id="@+id/three_section_left_hover"
                    style="@style/btn_handler_picker_right" />
            </LinearLayout>


            <View style="@style/Separator" />
            <TextView
                style="@style/setting_label_small"
                android:layout_width="match_parent"
                android:text="@string/side_center" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/setting_label_fill"
                    android:text="@string/gesture_up" />

                <Button
                    android:id="@+id/three_section_center_slide"
                    style="@style/btn_handler_picker_right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/setting_label_fill"
                    android:text="@string/gesture_up_hover" />

                <Button
                    android:id="@+id/three_section_center_hover"
                    style="@style/btn_handler_picker_right" />
            </LinearLayout>

            <View style="@style/Separator" />
            <TextView
                style="@style/setting_label_small"
                android:layout_width="match_parent"
                android:text="@string/side_right" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/setting_label_fill"
                    android:text="@string/gesture_up" />

                <Button
                    android:id="@+id/three_section_right_slide"
                    style="@style/btn_handler_picker_right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/setting_label_fill"
                    android:text="@string/gesture_up_hover" />

                <Button
                    android:id="@+id/three_section_right_hover"
                    style="@style/btn_handler_picker_right" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/switch_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/three_section_warn" />
    </LinearLayout>

</ScrollView>